testsuite/bsc.typechecker/context-errors/ContextReductionExplFunction.bsv.bsc-out.expected
checking package dependencies
compiling ContextReductionExplFunction.bsv
Error: "ContextReductionExplFunction.bsv", line 8, column 15: (T0020)
  Type error at:
    p[0]

  Expected type:
    Bool

  Inferred type:
    Bit#(1)

